--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@mui/icons-material": "^7.3.7",
     "@mui/material": "^7.3.7",
     "@tanstack/react-table": "^8.21.3",
+    "@types/leaflet": "^1.9.21",
     "axios": "^1.13.4",
     "clsx": "^2.1.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
+    "react-leaflet": "^5.0.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.6"
   },
